<resources>
    <string name="app_name">TestFirebase</string>
    <string name="prefs_file">PreferencesKey</string>
    <string name="title_activity_home_d">HomeActivityD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">usuario</string>
    <string name="nav_header_subtitle">biografia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="contra_requirements"><i>Al menos 6 carácteres y 1 símbolo o letra.</i></string>

    /*Menu lateral*/
    <string name="menu_home">Inicio</string>
    <string name="menu_social">Social</string>
    <string name="menu_gallery">Social</string>
    <string name="menu_slideshow">Mi perfil</string>
    <string name="menu_ajustes">Ajustes de cuenta</string>
    <string name="menu_salir">Cerrar sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>