<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_inventory_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_ajustes" />

            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/menu_salir" />
        </menu>

    </item>

</menu>